--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/**",
     "lint:fix": "eslint --fix src/**",
     "format": "prettier --write 'src/**'",
-    "start": "tsc && node --experimental-modules --es-module-specifier-resolution=node dist/main",
+    "start:dev": "tsc && node --experimental-modules --es-module-specifier-resolution=node dist/main",
     "start:prod": "node --experimental-modules --es-module-specifier-resolution=node dist/main",
     "dev": "nodemon",
     "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9229 -r ts-node/register src/main.ts",
@@ -28,12 +28,14 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
